# SyntheticTime

./: README.md  example_notebook.ipynb  pyproject.toml
synthetictime/: simple_time_series.py
